<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/test_mode" />

    <androidx.cardview.widget.CardView
        android:id="@+id/upgrade_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        app:cardCornerRadius="2dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/test_mode_banner">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/upgrade_title"
                style="@style/TextAppearance.AppCompat.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/upgrade_to_premium"
                android:textAllCaps="true"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="@+id/upgrade"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/upgrade"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/upgrade"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/premium_price"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/feature_a"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@id/test_mode_banner"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emoj"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/emoji"
        android:textColor="@color/black"
        android:textSize="70sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upgrade_card" />

    <TextView
        android:id="@+id/coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/emoj"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upgrade_card" />

    <TextView
        android:id="@+id/gems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@id/emoj"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coin" />

    <TextView
        android:id="@+id/shop_txt"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawablePadding="10dp"
        android:text="@string/store"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_baseline_shopping_bag_24"
        app:drawableTint="@color/purple_700"
        app:layout_constraintBottom_toTopOf="@id/store_list"
        app:layout_constraintLeft_toLeftOf="@id/store_list"
        app:layout_constraintTop_toBottomOf="@id/emoj" />

    <androidx.recyclerview.widget.RecyclerView

        android:id="@+id/store_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/ads_sample"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_txt" />

    <LinearLayout
        android:id="@+id/ads_sample"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <include
            android:id="@+id/ads"
            layout="@layout/ads_sample" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>